# swagger.json
@@ -7,7 +7,7 @@
     "paths": {
         "/": {
             "get": {
-                "summary": "/",
+                "summary": "get all ideas from file",
                 "responses": {
                     "404": {
                         "description": "Ideas not found"
@@ -18,9 +18,9 @@
                 ]
             },
             "post": {
-                "summary": "/",
+                "summary": "add idea to file",
                 "requestBody": {
-                    "description": "Pet object that needs to be added to the store",
+                    "description": "Idea object that needs to be added to the file",
                     "content": {
                         "application/json": {
                             "schema": {
@@ -50,7 +50,7 @@
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of pet to return",
+                        "description": "ID of idea to return",
                         "required": true,
                         "schema": {
                             "type": "integer",
@@ -66,11 +66,85 @@
                 "tags": [
                     "ideas"
                 ]
+            },
+            "delete": {
+                "summary": "delete idea by id from file",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of pet to return",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    },
+                    "404": {
+                        "description": "Idea not found"
+                    }
+                },
+                "tags": [
+                    "ideas"
+                ]
+            },
+            "put": {
+                "summary": "update Idea object from the file",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of idea to update",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "update Idea object from the file",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/PostIdea"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    },
+                    "404": {
+                        "description": "Idea not found"
+                    }
+                },
+                "tags": [
+                    "ideas"
+                ]
             }
         },
-        "/weather": {
+        "/weather/{town}": {
             "get": {
-                "summary": "/weather",
+                "summary": "request weather for town from openweathermap.org",
+                "parameters": [
+                    {
+                        "name": "town",
+                        "in": "path",
+                        "description": "town",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "400": {
                         "description": "Invalid ID supplied",
